--- a/both.html
+++ b/both.html
@@ -2,9 +2,27 @@
 <html lang="de">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="theme-color" content="#2196f3" />
   <title>Protein Bars Shop (Both)</title>
   <link rel="stylesheet" href="style.css" />
+  <style>
+    * {
+      -webkit-tap-highlight-color: rgba(0,0,0,0.1);
+      -webkit-touch-callout: none;
+    }
+    body {
+      -webkit-text-size-adjust: 100%;
+      -ms-text-size-adjust: 100%;
+      touch-action: manipulation;
+    }
+    button, input, select {
+      touch-action: manipulation;
+    }
+  </style>
 </head>
 <body>
   <header class="header">
@@ -44,7 +62,6 @@
   </main>
 
   <script>
-    // условие/вариант: 1=control, 2=socialproof, 3=scarcity, 4=both
     window.EXPERIMENT_CONDITION = 4;
   </script>
   <script src="./app.js"></script>
